applications/openeuler-api-ru-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-api-ru
  name: openeuler-api-ru
